--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,16 +1,14 @@
 /* This file intentionally left blank. */
-.videoWrapper {
- position: relative;
- padding-bottom: 56.25%;
- /* 16:9 */
- padding-top: 25px;
- height: 0;
+iframe {
+ position: absolute;
+ right: 0;
+ top:0;
+ width: 50%;
+ height: 100sh;
  }
 
-.videoWrapper iframe {
+.leftside {
  position: absolute;
- top: 0;
  left: 0;
- width: 100%;
- height: 100%;
+ top:0;
  }
